# ChromaCatch-Control

./: CLAUDE.md  conftest.py  docker-compose.yml  package-lock.json  pyproject.toml
.devcontainer/: devcontainer.json
esp32-display-test/: README.md  platformio.ini
esp32-display-test/src/: main.cpp
services/airplay-client/: pyproject.toml
services/airplay-client/airplay_client/: cli.py  config.py  esp32_forwarder.py  main.py  ws_client.py
services/airplay-client/airplay_client/capture/: airplay_manager.py  audio_capture.py  frame_capture.py  h264_capture.py
services/airplay-client/airplay_client/commander/: dsu_commander.py  esp32_client.py  esp32_commander.py  factory.py
services/airplay-client/airplay_client/sources/: __init__.py  airplay_source.py  base.py  capture_card_source.py  factory.py  ntr_source.py  screen_source.py  sysdvr_source.py
services/airplay-client/airplay_client/transport/: factory.py  rtp_fec_transport.py  srt_transport.py
services/airplay-client/tests/: test_airplay_manager.py  test_cli.py  test_commander.py  test_esp32_client.py  test_esp32_forwarder.py  test_frame_capture.py  test_h264_capture.py  test_rtp_fec_transport.py  test_sources.py  test_ws_client.py
services/backend/: Dockerfile  app_state.py  config.py  cv_tester.py  h264_decoder.py  main.py  mediamtx_manager.py  pyproject.toml  rtp_fec_receiver.py  session_manager.py  ws_handler.py
services/backend/mediamtx/: mediamtx.yml
services/backend/routers/: __init__.py  automation_api.py  client_api.py
services/backend/tests/: test_automation_api.py  test_backend_api.py  test_client_api_v1.py  test_cv_tester.py  test_messages.py  test_session_manager.py  test_ws_handler.py
services/control-sdk/: README.md  pyproject.toml
services/control-sdk/chromacatch_control_sdk/: __init__.py  client.py  models.py
services/control-sdk/tests/: test_sdk_models.py
services/cv-toolkit/cv_toolkit/: __init__.py  _utils.py  models.py  registry.py
services/cv-toolkit/cv_toolkit/tools/: __init__.py
services/cv-toolkit/cv_toolkit/tools/confirm/: __init__.py  (+15 more)
services/cv-toolkit/tests/: conftest.py  test_brightness_check.py  test_color_distance.py  test_color_presence.py  test_composite.py  test_contour_detect.py  test_dominant_colors.py  test_edge_density.py  test_exact_match.py  test_grid_similarity.py  test_grid_structure.py  test_histogram_similarity.py  test_locate_color.py  test_locate_contour.py  test_locate_feature.py  test_locate_multi_scale.py  test_locate_sub_object.py  test_locate_template.py  test_locate_text.py  test_models.py  test_motion_detect.py  test_object_detect.py  test_ocr_read.py  test_read_bar.py  test_read_number.py  test_read_text.py  test_registry.py  test_ssim_compare.py  test_utils.py
services/esp32/: platformio.ini  sdkconfig.defaults.esp32  sdkconfig.esp32
services/esp32/lib/ESP32-NimBLE-Combo/: BleCombo.h  BleComboKeyboard.cpp  BleComboKeyboard.h  BleConnectionStatus.h  KeyboardOutputCallbacks.cpp  KeyboardOutputCallbacks.h  library.properties
services/esp32/src/: main.cpp  switch_2_pro_ble.cpp  switch_2_pro_ble.h  switch_pro_bt.cpp  switch_pro_bt.h  switch_pro_usb.cpp  switch_pro_usb.h  switch_pro_vendor.cpp  usb_hid_bridge.cpp  usb_hid_bridge.h
services/esp32/tools/: control-panel.html  pio_env_wifi.py
services/ios-app/: README.md
services/ios-app/ChromaCatchController/ChromaCatchBroadcast/: BroadcastWSClient.swift  H264Encoder.swift  SampleHandler.swift
services/ios-app/ChromaCatchController/ChromaCatchController.xcodeproj/: project.pbxproj
services/location_service/: main.py  session_manager.py
services/location_service/tests/: test_location_api.py
services/shared/: constants.py  messages.py  rtp_fec_protocol.py
(+27 files in other folders)
