[tool.poetry]                                                    
name = "python-project"                                          
version = "0.1.0"                                                
description = ""                                                 
authors = ["Neil Tapiavala <neil@tapiavala.com>"]                 
readme = "README.md"                                             
                                                                 
[tool.poetry.dependencies]                                       
python = "^3.11"                                                 
fastapi = "0.104.1"                                              
uvicorn = {extras = ["standard"], version = "0.24.0"}            
pydantic = "2.5.0"                                               
                                                                 
[tool.poetry.group.dev.dependencies]                             
pytest = "^7.4.0"                                                
black = "^23.0.0"                                                
ruff = "^0.1.0"                                                  
mypy = "^1.7.0"                                                  
                                                                 
[build-system]                                                   
requires = ["poetry-core"]                                       
build-backend = "poetry.core.masonry.api"                        
                                                                 
[tool.black]                                                     
line-length = 88                                                 
target-version = ['py312']                                       
                                                                 
[tool.ruff]                                                      
target-version = "py312"                                         
line-length = 88                                                 
select = ["E", "W", "F", "I"]                                    
                                                                 
[tool.mypy]                                                      
python_version = "3.12"                                          
warn_return_any = true                                           
warn_unused_configs = true
