[tool.poetry]
name = "chromacatch-backend"
version = "0.7.0"
description = "ChromaCatch-Go remote backend - CV brain + command dispatch"
authors = ["Neil Tapiavala <neil@tapiavala.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
opencv-python-headless = "^4.9.0"
numpy = "^1.26.0"
httpx = "^0.25.0"
websockets = "^12.0"
av = ">=12.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
pytesseract = "^0.3.10"
python-multipart = "^0.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
