[tool.poetry]
name = "chromacatch-control-sdk"
version = "0.1.0"
description = "Python SDK for ChromaCatch Control backend APIs"
authors = ["Neil Tapiavala <neil@tapiavala.com>"]
readme = "README.md"
packages = [{ include = "chromacatch_control_sdk" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
websockets = "^12.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
